--- a/estilo.css
+++ b/estilo.css
@@ -3,35 +3,25 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    font-weight: bold;
+    color: #2c2c2c;
+    background-color: #2c2c2c;
 }
+
 .bg_video{
     display: flex;
     height: 100vh;
-    align-items:center; 
+    align-items:center;
 }
+
 .bg_video > video{
     width: 100%;
 }
+
 .img{
-    float: left;
-    background-repeat: no-repeat;
     width: 100px;
-    border-radius: 50%;
+    border-radius: 50%; 
 }
-html{
-    height: 500vh;
-    background-color: black;
-}
-.conteudo{
-    max-width: 1280px;
-    margin: auto;
-}
-.flex{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+
 header{
     width: 100%;
     padding: 60px 4%;
@@ -39,33 +29,310 @@ header{
     top: 0;
     left: 0;
     transition: 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
 header.rolagem{
-    background-color: #fff;
-    padding: 20px 4%;
+    background-color: white;
+    padding: 25px 4%;
 }
+
 header.rolagem a{
     color: black;
 }
+
 header.rolagem img{
-    float: left;
-    background-repeat: no-repeat;
     width: 100px;
-    border-radius: 50%;   
+    border-radius: 50%;
 }
+
 header ul{
     list-style-type: none;
 }
+
 header ul li{
     display: inline-block;
-    margin: 0px 40px;  
+    margin: 0px 40px;
 }
+
 header ul li a{
-    color: #fff;
-    text-decoration: none;   
+    color: white;
+    transition: all 0.2s;
+    text-decoration: none;
+    font-weight: bold;
 }
+
 header ul li a:hover{
     color: green;
     text-decoration: none;
     font-weight: 600;
+}
+
+header ul:last-child{
+    margin-right: 100px;
+}
+
+h2{
+    margin-top: 300px;
+    color:#fff;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 30px;
+}
+
+.produtos{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 1200px;
+    margin: 0 auto;
+    grid-gap: 30px;
+}
+
+.produtos img{
+    max-width: 100%;
+    border-radius: 12px;
+}
+
+.produtos p {
+    color: white;
+}
+
+.contatos{
+    margin-top: 300px;
+}
+
+.atendimento h3 {
+    color: #fff;
+    text-align: center;  
+}
+
+.atendimento p {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    padding: 10px;
+}
+
+.redesociais h3 {
+    color: #fff;
+    text-align: center;   
+}
+
+.redesociais a{
+    text-align: center;
+}
+
+#contato{
+    display: flex;
+    justify-content: space-around;
+    background-color: green;
+    margin-top:100px;
+}
+
+#contato a{
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    padding: 10px;
+}
+
+h3{
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 30px;
+}
+
+p{
+    color: #fff;
+    text-align: center;
+}
+
+.artigos{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 20px;
+    border: solid 2px white;
+    margin-top: 200px;
+}
+
+.wats{
+    font-size: 50px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-right: 20px;
+}
+
+.wats a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.img-categorias img{
+    border-radius: 50%;
+}
+
+.img-categorias p{
+    text-align: center;
+    font-weight: bolder;
+}
+
+a{
+    text-decoration: none;
+}
+
+#botao{
+    padding:9px;
+    background-color: green;
+    color: #fff;
+    border-radius: 50px;
+    transition: all 0.2s;
+}
+
+#botao:hover{
+    background-color: darkgreen;
+}
+
+.img-produtos{
+    text-align: center;
+}
+
+.recado{
+    margin: 300px auto 0 auto;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.recado a{
+    padding: 10px 20px;
+    color: white;
+    background-color: green;
+    border-radius: 50px;
+    transition: all 0.2s;
+}
+
+.recado a:hover{
+    background-color: darkgreen;
+}
+
+#cate{
+    margin-top: 150px;
+}
+
+.menu-mobile{
+    background-color: #2c2c2c;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99999;
+    width: 0%;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.menu-mobile.abrir-menu{
+    width: 65%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu{
+    display: block;
+}
+
+.menu-mobile nav ul{
+    text-align: right;
+}
+.menu-mobile nav ul a{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    padding: 20px 10%;
+    display: block;
+    
+}
+.menu-mobile nav ul a:hover{
+    background-color:green;
+    color: black;
+}
+.menu-mobile .btn-fechar{
+    padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i{
+    color: #fff;
+    font-size: 30px;
+}
+
+.btn-abrir-menu i{
+    color: black;
+    position: fixed;
+    top: 0;
+    right: 0;
+    font-size: 200%;
+    padding: 20px 5%;
+    z-index: 99998;
+
+}
+
+.overlay-menu{
+    background-color: rgba(0, 0, 0, 0.705);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 8888;
+    display: none;
+}
+
+.btn-abrir-menu{
+        display: none;
+}
+
+@media screen and (max-width: 1450px){
+    #header ul{
+        display: none;
+    }
+
+    .produtos{
+        flex-direction: column;
+        max-width: 300px;
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
+        grid-gap: 30px;
+    }
+
+    #cate{
+        margin-top: -150px;
+    }
+
+    .btn-abrir-menu{
+        display: block;
+    }
+
+    .bg_video{
+        display:block;
+    }
+    header{
+        padding: 25px 4%;
+    }
+
+    .img{
+        width: 15%;
+    }
+    header.rolagem img{
+        display: flex;
+        width: 15%;
+    }
+    header.rolagem{
+        background-color: white;
+        padding: 5px 4%;
+    }
 }
