--- a/estilo.css
+++ b/estilo.css
@@ -124,6 +124,10 @@ h2{
 .redesociais a{
     text-align: center;
 }
+.redesociais p{
+   display: inline;
+   padding-left: 4px;
+}
 
 #contato{
     display: flex;
@@ -251,13 +255,12 @@ a{
 .menu-mobile nav ul a{
     color: #fff;
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 300px;
     padding: 20px 10%;
     display: block;
     
 }
 .menu-mobile nav ul a:hover{
-    background-color:green;
     color: black;
 }
 .menu-mobile .btn-fechar{
@@ -270,14 +273,14 @@ a{
 }
 
 .btn-abrir-menu i{
-    color: black;
+    color: #fff;
     position: fixed;
     top: 0;
     right: 0;
     font-size: 200%;
-    padding: 20px 5%;
+    padding: 40px 5%;
     z-index: 99998;
-
+    transition: .5s;
 }
 
 .overlay-menu{
@@ -295,7 +298,7 @@ a{
         display: none;
 }
 
-@media screen and (max-width: 1450px){
+@media screen and (max-width: 720px){
     #header ul{
         display: none;
     }
@@ -310,7 +313,7 @@ a{
     }
 
     #cate{
-        margin-top: -150px;
+        margin-top: -200px;
     }
 
     .btn-abrir-menu{
@@ -319,6 +322,7 @@ a{
 
     .bg_video{
         display:block;
+
     }
     header{
         padding: 25px 4%;
@@ -335,4 +339,32 @@ a{
         background-color: white;
         padding: 5px 4%;
     }
-}
+    header.rolagem #btn-menu i{
+        color: black;
+        padding: 20px 5%;
+        transition: .5s;
+    }
+    #contato{
+        display:grid;
+        padding-bottom: 20%;
+    }
+    .redesociais h3{
+        display: flex
+    }
+    .redesociais p{
+        display: none;        
+    }
+    .redesociais i{
+        font-size: 300%;
+    }
+    .recado p{
+        font-size: 70%;
+        padding-bottom: 5%;
+    }
+}    
+
+@media screen and (max-width: 1420px){
+    .bg_video{
+        display:block;
+    }
+}    
