--- a/estilo.css
+++ b/estilo.css
@@ -1,28 +1,31 @@
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: #2c2c2c;
     background-color: #2c2c2c;
+
 }
 
-.bg_video{
+.bg_video {
     display: flex;
     height: 100vh;
-    align-items:center;
+    align-items: center;
 }
 
-.bg_video > video{
+.bg_video>video {
     width: 100%;
 }
 
-.img{
+.img {
+    float: left;
+    background-repeat: no-repeat;
     width: 100px;
-    border-radius: 50%; 
+    border-radius: 50%;
 }
 
-header{
+header {
     width: 100%;
     padding: 60px 4%;
     position: fixed;
@@ -34,79 +37,77 @@ header{
     justify-content: space-between;
 }
 
-header.rolagem{
+header.rolagem {
     background-color: white;
-    padding: 25px 4%;
+    padding: 20px 4%;
 }
 
-header.rolagem a{
+header.rolagem a {
     color: black;
 }
 
-header.rolagem img{
+header.rolagem img {
+    float: left;
+    background-repeat: no-repeat;
     width: 100px;
     border-radius: 50%;
 }
 
-header ul{
+header ul {
     list-style-type: none;
 }
 
-header ul li{
+header ul li {
     display: inline-block;
     margin: 0px 40px;
 }
 
-header ul li a{
+header ul li a {
     color: white;
     transition: all 0.2s;
     text-decoration: none;
     font-weight: bold;
 }
 
-header ul li a:hover{
+header ul li a:hover {
     color: green;
     text-decoration: none;
     font-weight: 600;
 }
 
-header ul:last-child{
+header ul:last-child {
     margin-right: 100px;
 }
 
-h2{
+h2 {
     margin-top: 300px;
-    color:#fff;
+    color: #fff;
     font-weight: bold;
     text-align: center;
     margin-bottom: 50px;
     font-size: 30px;
 }
 
-.produtos{
+.produtos {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     max-width: 1200px;
     margin: 0 auto;
     grid-gap: 30px;
+
 }
 
-.produtos img{
+.produtos img {
     max-width: 100%;
-    border-radius: 12px;
 }
 
 .produtos p {
     color: white;
 }
 
-.contatos{
-    margin-top: 300px;
-}
-
 .atendimento h3 {
     color: #fff;
-    text-align: center;  
+    text-align: left;
 }
 
 .atendimento p {
@@ -118,32 +119,29 @@ h2{
 
 .redesociais h3 {
     color: #fff;
-    text-align: center;   
-}
-
-.redesociais a{
     text-align: center;
-}
-.redesociais p{
-   display: inline;
-   padding-left: 4px;
+
 }
 
-#contato{
+.redesociais p {
+    display: inline;
+}
+
+#contato {
     display: flex;
     justify-content: space-around;
     background-color: green;
-    margin-top:100px;
+    margin-top: 100px;
 }
 
-#contato a{
+#contato a {
     text-decoration: none;
     color: #fff;
     display: block;
     padding: 10px;
 }
 
-h3{
+h3 {
     color: #fff;
     font-weight: bold;
     text-align: center;
@@ -151,20 +149,11 @@ h3{
     font-size: 30px;
 }
 
-p{
+p {
     color: #fff;
-    text-align: center;
 }
 
-.artigos{
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 20px;
-    border: solid 2px white;
-    margin-top: 200px;
-}
-
-.wats{
+.wats {
     font-size: 50px;
     position: fixed;
     bottom: 0;
@@ -172,48 +161,48 @@ p{
     margin-right: 20px;
 }
 
-.wats a{
+.wats a {
     text-decoration: none;
     color: #fff;
 }
 
-.img-categorias img{
+.img-categorias img {
     border-radius: 50%;
 }
 
-.img-categorias p{
+.img-categorias p {
     text-align: center;
     font-weight: bolder;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-#botao{
-    padding:9px;
+#botao {
+    padding: 9px;
     background-color: green;
     color: #fff;
     border-radius: 50px;
     transition: all 0.2s;
 }
 
-#botao:hover{
+#botao:hover {
     background-color: darkgreen;
 }
 
-.img-produtos{
+.img-produtos {
     text-align: center;
 }
 
-.recado{
+.recado {
     margin: 300px auto 0 auto;
     text-align: center;
     font-size: 30px;
     font-weight: bold;
 }
 
-.recado a{
+.recado a {
     padding: 10px 20px;
     color: white;
     background-color: green;
@@ -221,15 +210,15 @@ a{
     transition: all 0.2s;
 }
 
-.recado a:hover{
+.recado a:hover {
     background-color: darkgreen;
 }
 
-#cate{
+#cate {
     margin-top: 150px;
 }
 
-.menu-mobile{
+.menu-mobile {
     background-color: #2c2c2c;
     height: 100vh;
     position: fixed;
@@ -241,38 +230,41 @@ a{
     transition: .5s;
 }
 
-.menu-mobile.abrir-menu{
+.menu-mobile.abrir-menu {
     width: 65%;
 }
 
-.menu-mobile.abrir-menu ~ .overlay-menu{
+.menu-mobile.abrir-menu~.overlay-menu {
     display: block;
 }
 
-.menu-mobile nav ul{
+.menu-mobile nav ul {
     text-align: right;
 }
-.menu-mobile nav ul a{
+
+.menu-mobile nav ul a {
     color: #fff;
     font-size: 20px;
     font-weight: 300px;
     padding: 20px 10%;
     display: block;
-    
+
 }
-.menu-mobile nav ul a:hover{
+
+.menu-mobile nav ul a:hover {
     color: black;
 }
-.menu-mobile .btn-fechar{
+
+.menu-mobile .btn-fechar {
     padding: 20px 5%;
 }
 
-.menu-mobile .btn-fechar i{
+.menu-mobile .btn-fechar i {
     color: #fff;
     font-size: 30px;
 }
 
-.btn-abrir-menu i{
+.btn-abrir-menu i {
     color: #fff;
     position: fixed;
     top: 0;
@@ -283,7 +275,7 @@ a{
     transition: .5s;
 }
 
-.overlay-menu{
+.overlay-menu {
     background-color: rgba(0, 0, 0, 0.705);
     width: 100%;
     height: 100%;
@@ -294,16 +286,16 @@ a{
     display: none;
 }
 
-.btn-abrir-menu{
-        display: none;
+.btn-abrir-menu {
+    display: none;
 }
 
-@media screen and (max-width: 720px){
-    #header ul{
+@media screen and (max-width: 720px) {
+    #header ul {
         display: none;
     }
 
-    .produtos{
+    .produtos {
         flex-direction: column;
         max-width: 300px;
         display: flex;
@@ -312,59 +304,67 @@ a{
         grid-gap: 30px;
     }
 
-    #cate{
-        margin-top: -200px;
-    }
-
-    .btn-abrir-menu{
+    .btn-abrir-menu {
         display: block;
     }
 
-    .bg_video{
-        display:block;
-
+    .bg_video {
+        display: block;
     }
-    header{
+
+    header {
         padding: 25px 4%;
     }
 
-    .img{
+    .img {
         width: 15%;
     }
-    header.rolagem img{
+
+    header.rolagem img {
         display: flex;
         width: 15%;
     }
-    header.rolagem{
+
+    header.rolagem {
         background-color: white;
         padding: 5px 4%;
     }
-    header.rolagem #btn-menu i{
+
+    header.rolagem #btn-menu i {
         color: black;
         padding: 20px 5%;
         transition: .5s;
     }
-    #contato{
-        display:grid;
-        padding-bottom: 20%;
+
+    #cate {
+        margin-top: -200px;
     }
-    .redesociais h3{
-        display: flex
+
+    #contato {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
     }
-    .redesociais p{
-        display: none;        
+
+    .redesociais p {
+        display: none;
     }
-    .redesociais i{
+
+    .redesociais i {
         font-size: 300%;
     }
-    .recado p{
+
+    .atendimento h3 {
+        text-align: center;
+    }
+
+    .recado p {
         font-size: 70%;
         padding-bottom: 5%;
     }
-}    
-
-@media screen and (max-width: 1420px){
-    .bg_video{
-        display:block;
+}
+    @media screen and (max-width: 1024px){
+        .bg_video{
+            display: block;
+        }
     }
-}    
